--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 					<div id="main">
 						<div class="inner">
 							<header>
+								<h2>Chat with Me</h2>
+								<input type="text" id="userInput" placeholder="Type your message here...">
+								<button onclick="sendMessage()">Send</button>
+								<div id="messageDisplay"></div>
 								<h1>This is Phantom, a free, fully responsive site<br />
 								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
